...
            android:layout_margin="5dp"
            android:clipToPadding="true"
            app:cardCornerRadius="1dp"
            app:cardElevation="6dp">

            <RelativeLayout
                android:id="@+id/ingredientsRL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:layout_marginTop="2dp"
                android:background="?attr/selectableItemBackground"
                android:orientation="vertical">
...
            android:padding="@dimen/recipe_details_ingredients_tv_padding"
            android:text="@string/step"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/recipe_details_step_tv_size" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/stepsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/recipe_details_steps_top_margin" />

    </LinearLayout>

...
